test/corpus/identifiers.txt
===
relative
===
x = foo.bar.baz
---
(unison
    (term_declaration
        (term_definition
            (wordy_id)
            (kw_equals)
            (identifier))))
===
wordy_id
===
x = baz
---
(unison
    (term_declaration
        (term_definition
            (wordy_id)
            (kw_equals)
            (identifier))))
===
symop
===
x = 1 + 1
---
(unison
    (term_declaration
        (term_definition
            (wordy_id)
            (kw_equals)
            (function_application
                (nat)
                (operator)
                (nat)))))
