test/corpus/term_declaration.txt
===
simple term declaration
===
x = 5
---
(unison
    (term_declaration
        (term_definition
            (wordy_id)
            (kw_equals)
            (nat))))     
===
[Term] Declaration
===
sumUpTo : Nat -> Nat
sumUpTo x = x
---
(unison
    (term_declaration
        (type_signature (wordy_id) (type_signature_colon) (wordy_id) (arrow_symbol) (wordy_id))
        (term_definition (wordy_id) (wordy_id) (kw_equals) (wordy_id))))
===
[Term] type signature with complex abilities clause
===
store.stopIfTrue : (a -> Boolean) -> a ->{Abort, Store a} a
store.stopIfTrue = f a b c
---
(unison
    (term_declaration
        (type_definition)
        (term_definition
            (identifier)
            (kw_equals)
            (function_application
                (identifier)
                (function_param
                    (wordy_id))
                (function_param
                    (wordy_id))
                (function_param
                    (wordy_id))))))